compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__restrict_assign_type-8.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a : real := 1"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(3))), span: Span { file: None, range: 18..19 }, state: Value(Real(1.0)) },
    ],
    var_to_expr: {
        DefId(0): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Real(1.0)


