compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__restrict_assign_type.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const a : boolean := false"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 21..26 }, state: Value(Bool(false)) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Bool(false)


