compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__string_concat_ops-9.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "\"v\" + \"ee\""

---
"_"@(FileId(1), 6..7) -> String("vee")


