compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__supported_values-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "\"alphabet\""

---
"_"@(FileId(1), 6..7) -> String("alphabet")


