compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__supported_values-5.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "'fun times'"

---
"_"@(FileId(1), 6..7) -> CharN("fun times")


